[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinstaflow"
version = "0.1.0"
description = "OpenInstaFlow — an MCP server for the Instagram Graph API (profile, media, insights, publishing, Pages, DMs). Bring your own Meta token."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "instagram", "instagram-graph-api", "meta", "openinstaflow"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "apscheduler>=3.10",
]

[project.scripts]
openinstaflow = "openinstaflow.__main__:main"
