[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openinstaflow"
version = "0.1.0"
description = "OpenInstaFlow — an MCP server for the Instagram Graph API (profile, media, insights, publishing, Pages, DMs). Bring your own Meta token."
license = "MIT"
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "instagram", "instagram-graph-api", "meta", "openinstaflow"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "apscheduler>=3.10",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "cryptography>=43.0.0",
    "psycopg2-binary>=2.9.9",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "tzdata>=2024.1",
    "boto3>=1.34.0",
]

[project.scripts]
openinstaflow = "openinstaflow.__main__:main"
openinstaflow-api = "openinstaflow.api:main"
